# WarpConvNet

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  docs.yml
docker/: Dockerfile  build.sh
docs/: contributing.md  deployment.md  file_descriptions.yaml  index.md  mkdocs-readthedocs.yml  mkdocs.yml  requirements.txt
docs/api/: core.md  dataset.md  geometry.md  misc.md  models.md  nn.md  ops.md  types.md  utils.md
docs/diagrams/: api_sequence.md  architecture.md  class_hierarchy.md  data_flow.md  geometry_types.md  model_architecture.md
docs/examples/: modelnet.md  scannet.md
docs/getting_started/: installation.md  quickstart.md
docs/javascripts/: mermaid-init.js
docs/user_guide/: concepts.md  diagrams.md  geometry_tutorial.md  geometry_types.md  network_tutorial.md  normalizations.md  point_convolutions.md  sparse_convolutions.md
examples/: mnist.py  modelnet.py  point_transformer_v3.py  scannet.py
scripts/: build_docs.py  build_docs.sh  dir_struct.sh  inspect_benchmark_cache.py  serve_docs.py
tests/: test_all_single_gpu.py  test_argsort.py  test_attention.py  test_base_geometry.py  test_batch_copy.py  test_coord_ops.py  test_encodings.py  test_fsdp.py  test_global_pool.py  test_neighbor_search_discrete.py  test_nested.py  test_normalization.py  test_point_collection.py  test_point_conv.py  test_point_pool.py  test_sort.py  test_sparse_conv.py  test_sparse_coords_ops.py  test_sparse_pool.py  test_spatially_sparse_tensor.py  test_unique.py  test_utils.py  test_voxel_ops.py
tests/base/: test_batched.py  test_import.py
tests/coords/: test_batch_index.py  test_expand.py  test_grid.py  test_hashmap.py  test_search_continuous.py  test_search_discrete.py  test_search_torch_discrete.py  test_search_warp_discrete.py  test_serialization.py  test_stride.py  test_torch_hashmap.py  test_voxel_ops.py
tests/csrc/: test_cutlass_gemm.py  test_implicit_fma.py  test_implicit_gemm.py  test_implicit_gemm_split_k.py  test_implicit_reduction.py  test_segmented_arithmetic.py  test_segmented_sort.py  test_voxel_mapping.py
tests/features/: test_cat.py  test_convert.py  test_grid.py  test_pad.py  test_patch.py
tests/geometry/: test_hashmap.py
tests/nn/: benchmark_sparse_conv.py  test_attention.py  test_factor_grid.py  test_factor_grid_global_conv.py  test_global_pool.py  test_grid_conv.py  test_normalization.py  test_point_conv.py  test_point_pool.py  test_sparse_conv.py  test_sparse_conv_benchmark.py  test_sparse_conv_depth.py  test_sparse_pool.py
tests/types/: test_factor_grid.py  test_grid.py  test_points.py  test_to_grid.py  test_voxels.py
warp/convnet/: README.md  neighbor_search.py  point_conv.py
warp/convnet/core/: hashmap.py
warp/convnet/docker/: build.sh
warp/convnet/geometry/: base_geometry.py  point_collection.py  sparse_tensor.py  spatially_sparse_tensor.py
warp/convnet/models/: point_conv_unet.py
warp/convnet/nn/: base_module.py  encoding.py  mlp.py  neighbor_search.py  point_conv.py  point_transform.py  sparse_conv.py
warp/convnet/ops/: reductions.py
warp/convnet/tests/: README.md  test_all_single_gpu.py  test_coord_ops.py  test_encoding.py  test_encodings.py  test_fsdp.py  test_mnist.py  test_modelnet.py  test_neighbor_search_discrete.py  test_point_collection.py  test_point_conv.py  test_point_conv_enc_dec.py  test_point_conv_unet.py  test_point_pool.py  test_sort.py  test_sparse_conv.py  test_sparse_coords_ops.py  test_sparse_ops.py  test_spatially_sparse_tensor.py  test_utils.py  test_voxel_ops.py
warp/convnet/utils/: argsort.py  batch_index.py  ntuple.py  ravel.py  timer.py  unique.py
warpconvnet/: __init__.py  constants.py  types.py
warpconvnet/core/: hashmap.py
warpconvnet/csrc/: cutlass_gemm_gather_scatter.cu  cutlass_gemm_pybind.cpp  hashmap_kernels.cu  implicit_fma_kernel.cu  implicit_gemm.cu  implicit_gemm_split_k.cu  implicit_reduction.cu  segmented_arithmetic.cu  warpconvnet_pybind.cpp
warpconvnet/csrc/include/: gemm_operation_interface.h  gemm_operation_traits.h  gemm_operation_types.h  gemm_operations.h  gemm_precision_traits.h  vectorized_types.h
warpconvnet/dataset/: __init__.py  modelnet.py  scannet.py
warpconvnet/examples/: modelnet.py  scannet.py  test_mnist.py  test_modelnet.py
warpconvnet/geometry/: base_geometry.py  point_collection.py  spatially_sparse_tensor.py
warpconvnet/geometry/base/: __init__.py  batched.py  coords.py  features.py  geometry.py
warpconvnet/geometry/coords/: grid.py  integer.py  real.py  sample.py
warpconvnet/geometry/features/: __init__.py  batch_copy.py  cat.py  convert.py  grid.py  pad.py  patch.py
warpconvnet/models/: point_conv_unet.py  sparse_conv_unet.py
warpconvnet/nn/: __init__.py  activations.py  attention.py  base_module.py  encoding.py  encodings.py  mlp.py  normalizations.py  point_conv.py  point_pool.py  point_transform.py  pools.py  sequential.py  sparse_conv.py  sparse_pool.py  transforms.py  unique.py
warpconvnet/nn/modules/: mlp.py  (+12 more)
warpconvnet/ops/: batch_copy.py  reductions.py
warpconvnet/tests/: README.md  test_all_single_gpu.py  test_batch_copy.py  test_coord_ops.py  test_encoding.py  test_fsdp.py  test_global_pool.py  test_neighbor_search_discrete.py  test_point_collection.py  test_point_conv.py  test_point_conv_enc_dec.py  test_point_conv_unet.py  test_point_pool.py  test_sort.py  test_sparse_conv.py  test_sparse_coords_ops.py  test_sparse_pool.py  test_sparse_unet.py  test_spatially_sparse_tensor.py  test_utils.py  test_voxel_ops.py
warpconvnet/utils/: batch_index.py  benchmark_cache.py  cuda_utils.py  inspect_benchmark_cache.py  list_to_batch.py  logger.py  nested.py  ntuple.py  ravel.py  timer.py  type_cast.py  unique.py
(+63 files in other folders)
