[build-system]
requires = ["setuptools>=61", "build", "wheel", "torch==2.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "warpconvnet"
requires-python = ">=3.9"
authors = [{ name = "Chris Choy", email = "cchoy@nvidia.com" }]
description = "3D Point Cloud and Spatially Sparse Convolutional Networks Framework"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "torch", "warp-lang>=1.6.2", "jaxtyping", "torch-scatter"]
dynamic = ["version"]

[project.urls]
GitLab = "https://gitlab.nvidia.com/3dmmllm/warpconvnet"
Documentation = "https://gitlab.nvidia.com/3dmmllm/warpconvnet/docs"

[project.optional-dependencies]
dev = [
    "ipdb",
    "pre-commit",
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
]

docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "pymdown-extensions>=9.0.0",
]

models = [
    "h5py",
    "wandb",
    "hydra-core",
    "omegaconf",
    "pytorch-lightning",
    "torchmetrics",
]

all = [
    "warpconvnet[dev]",
    "warpconvnet[docs]",
    "warpconvnet[models]",
]

[project.scripts]
warpconvnet-docs = "scripts.serve_docs:serve_docs"
warpconvnet-build-docs = "scripts.build_docs:build_docs"

[tool.setuptools.packages.find]
include = ["warpconvnet*", "scripts*"]

[tool.setuptools.dynamic]
version = { file = ["VERSION.md"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.pytest.ini_options]
markers = [
    "benchmark: mark test as a performance benchmark",
]
