[build-system]
requires = ["setuptools", "build", "wheel", "torch>=2.0.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "warpconvnet"
requires-python = ">=3.9"
authors = [{ name = "Chris Choy", email = "cchoy@nvidia.com" }]
description = "3D Point Cloud and Spatially Sparse Convolutional Networks Framework"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "torch", "warp-lang", "jaxtyping", "pybind11"]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/NVlabs/WarpConvNet"
Documentation = "https://nvlabs.github.io/WarpConvNet"

[project.optional-dependencies]
dev = [
    "ipdb",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
]

models = [
    "rich",
    "h5py",
    "wandb",
    "hydra-core",
    "omegaconf",
    "lightning",
    "torchmetrics",
]

all = [
    "warpconvnet[dev]",
    "warpconvnet[docs]",
    "warpconvnet[models]",
]

[project.scripts]
warpconvnet-docs = "scripts.serve_docs:serve_docs"
warpconvnet-build-docs = "scripts.build_docs:build_docs"

[tool.setuptools.packages.find]
include = ["warpconvnet*", "scripts*"]

[tool.setuptools.package-data]
warpconvnet = ["csrc/*.cu", "csrc/*.cpp", "csrc/*.h", "csrc/*.hpp", "csrc/include/*.h", "csrc/include/**/*.h", "csrc/include/**/*.hpp"]

[tool.setuptools.dynamic]
version = { file = ["VERSION.md"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.pytest.ini_options]
markers = [
    "benchmark: mark test as a performance benchmark",
    "slow: mark test as slow to run",
]
